--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -409,22 +409,7 @@ For example, the following is now supported:
 
 {productname} 6.3 includes a new event, `ToggleToolbarDrawer`, to subscribe to the toolbar’s opening and closing actions.
 
-In previous versions of {productname}, when the `ToggleToolbarDrawer` command was set to `toolbar_mode: "sliding"` or `toolbar_mode: “floating”,` the `ToggleToolbarDrawer` did not create an opening or closing event.
-
-With {productname} 6.3, the new `ToggleToolbarDrawer` event has been introduced. When the `ToggleToolbarDrawer` command is triggered, the new event initializes an `onToggle` callback that propagates the `OuterContainer` component for `SplitSlidingToolbar` and `SplitFloatingToolbar`.
-
-Once the `OuterContainer` component event is triggered, the console records either a `true` or `false` action that calls on the `onToggled` callback which supports the `FloatingToolbarButton` and `SplitFloatingToolbar` components.
-
-
-
-
-
-
-We added a ToggleToolbarDrawer event which gets passed {state: true, or state: false} depending on whether the toolbar is now visible or invisible.
-
-
-
-
+This new event passes `{state: true}` if the toolbar is visible and it passes `{state: false}` if the toolbar is invisible.
 
 
 [[changes]]
