--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -200,7 +200,7 @@ The {productname} 6.3 release includes an accompanying release of the **Merge Ta
 
 A new command, `mceMergeTag` has been added which can convert the current editor context into a merge tag. This new command is available to use when defining xref:content-behavior-options.adoc#text_patterns[Text Patterns].
 
-Previously only a predefined list of merge tags could be used. When the new `mceMergeTag` command is added to `text_patterns`, any text selection content can be converted into a merge tag.
+Previously only a predefined list of merge tags could be used. When the new `mceMergeTag` command is added, any text selection content can be converted into a merge tag.
 
 As well, configuring the inline `text_pattern` with this command allows merge tags to be entered by manual typing.
 
