--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -198,7 +198,7 @@ The {productname} 6.3 release includes an accompanying release of the **Merge Ta
 
 ==== New mceMergeTag command to wrap selected content in a merge tag
 
-A new command, `mceMergeTag` has been added which can convert any string into a merge tag. This new command is available to use when defining xref:content-behavior-options.adoc#text_patterns[Text Patterns].
+A new command, `mceMergeTag` has been added which can convert any selected text into a merge tag. This new command is available to use when defining xref:content-behavior-options.adoc#text_patterns[Text Patterns].
 
 Previously only a predefined list of merge tags could be used. When the new `mceMergeTag` command is added, any selected text can be converted into a merge tag.
 
