DOC-1777: 6.3-release-notes.adoc
Edits to Advanced Typography introductory text consequent to notes from @tiny-ben-tran.

--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -38,7 +38,7 @@ For information on the **Inline CSS** plugin, see: xref:inline-css.adoc[Inline C
 
 The {productname} 6.3 release includes the new **Advanced typography** premium plugin.
 
-The **Advanced Typography** plugin, depending on its setting, can replace common typewriter-style characters with their professional typesetter equivalents after the _Advanced Typography_ button is pressed. This action will modify either the entire content for the {productname} document or the specific text selection highlighted by the user.
+The **Advanced Typography** plugin, depending on its setting, can replace common typewriter-style characters with their professional typesetter equivalents after the _Advanced Typography_ button is pressed. This action will modify either the entire {productname} document or the text selected by the user.
 
 For information on the **Advanced typography** plugin, see: xref:advanced-typography.adoc[Advanced typography].
 
