--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -293,7 +293,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.3 also includes the following improvements
 
-=== The Text color and Background color menus now display a checkmark denoting the currently selected color
+=== The Text color and Background color menus now display a check mark denoting the currently selected color
 
 Previously, the color swatches displayed when the Text color and Background color menus were opened gave no indication as to whether or not the Text color or Background color of the current selection was one of the colors displayed in these menus.
 
