--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -327,8 +327,10 @@ If, in the following example, a user places the insertion point between the firs
 ----
 <p>
   <span class="mce-annotation tox-comment" 
-  	data-mce-annotation-uid="mce-conversation_58585987121669010253247" 
-	data-mce-annotation="tinycomments">Comment</span>
+    data-mce-annotation-uid="mce-conversation_58585987121669010253247" 
+    data-mce-annotation="tinycomments">
+      Comment
+  </span>
 </p>
 ----
 
