--- a/modules/ROOT/partials/configuration/advanced-typography.adoc
+++ b/modules/ROOT/partials/configuration/advanced-typography.adoc
@@ -10,11 +10,11 @@ By setting up the `typography_default_lang`, each time the user opens the {produ
 [source,js,subs="attributes+"]
 ----
 tinymce.init({
-  selector: "textarea",  // change this value according to your html
+  selector: 'textarea',  // change this value according to your html
   menu: { tools: { title: 'Tools', items: 'code wordcount typography' }},
-  plugins: "typography",
-  toolbar: "typography",
-  typography_default_lang: "en-US", // Define the default language here, example: "en-US"
+  plugins: 'typography',
+  toolbar: 'typography',
+  typography_default_lang: 'en-US', // Define the default language here, example: 'en-US'
 });
 ----
 
