--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -54,7 +54,7 @@ The British English typesetting norm is to use opening and closing single-quote 
 
 The American English typesetting norm is to use opening and closing double-quote marks to denote direct quotation: *“* and *”*.
 
-And one Spanish typesetting norm is to use guillemets, also known as comillas angulares, comillas franceses or chevrons, to denote direct quotation: *«* and *»*.
+And one Spanish typesetting norm is to use guillemets, also known as comillas angulares, comillas francesas or chevrons, to denote direct quotation: *«* and *»*.
 
 So, for example, if a {productname} document included a string thus:
 
