--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -126,7 +126,7 @@ In {productname} 6.3, improvements for the accessibility checker were added to p
 
 In previous versions of {productname} the accessibility checker used the same triangle warning icon for all alerts when displayed. In {productname} 6.3, each alert type now displays a unique icon.
 
-* Warning alerts now display as an exclamation mark nested inside a yellow circle.
+* Warning alerts now display as an exclamation mark nested inside a yellow octagon.
 * Error alerts now display as an exclamation mark nested inside a red triangle.
 * Success alerts now display as a green tick.
 
