--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -196,7 +196,7 @@ The {productname} 6.3 release includes an accompanying release of the **Merge Ta
 
 **Merge Tags** 1.1.0 includes one addition, one fix, and one change:
 
-==== New mceMergeTag command to wrap selected content in a merge tag
+==== New `mceMergeTag` command to wrap selected content in a merge tag
 
 A new command, `mceMergeTag` has been added which can convert any selected text into a merge tag. This new command is available to use when defining xref:content-behavior-options.adoc#text_patterns[Text Patterns].
 
