--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -374,7 +374,7 @@ The `ToggleView` command can, as its name suggests, toggle view visibility.
 As well, the `ToggleView` command can be queried for its current state.
 
 
-=== New color_default_foreground and color_default_background options to set the initial default color for the forecolor and backcolor toolbar buttons and menu items.
+=== New `color_default_foreground` and `color_default_background` options to set the initial default color for the forecolor and backcolor toolbar buttons and menu items.
 
 {productname} 6.3 adds a new feature that allows the default color for the `color_default_foreground` and `color_default_background` in the toolbar button menu to be pre-defined.
 
