--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -469,7 +469,7 @@ In {productname} 6.3, the `ExpandRange.ts:expandRng()` function now behaves as i
 
 === Compilation errors were thrown when using TypeScript 4.8
 
-{productname} 6.3 includes updates to the latest `rollup-plugin-dts` version to pull in a fix that was generating invalid generics. The update also allowed for a transition from typescript 4.7.4 to typescript 4.8.3, which, further, fixed compilation errors that were occurring.
+{productname} 6.3 includes updates to the latest `rollup-plugin-dts` version to pull in a fix that was generating invalid generics. The update also allowed for a transition from Typescript 4.7.4 to Typescript 4.8.3, which, further, fixed compilation errors that were occurring.
 
 === Line separator scrolling in floating toolbars
 
