--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -118,7 +118,7 @@ The icon’s text was centered and the *Issue*, *Warning*, or *Error* sub-headin
 
 Additionally, borders were removed from the exterior of the description field and contrast colors were adjusted to match the background color of the icons added for this release.
 
-==== Replaced the single warning icon presented in dialogs with icons specific to each alert level;
+==== Replaced the single warning icon presented in dialogs with icons specific to each alert level
 
 Previously, all **Accessibility Checker** warning dialogs presented with a triangle warning icon, regardless of whether the alert was informational, a warning, or an error.
 
